# llm-fine-tune-hf

./: .env.example  .gitignore  CHANGELOG.md  README.md  REWARDS.md  TRAINING_EVAL_CONTRACT.md  USAGE_GUIDE.md  main.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: python-compile-check.yml
configs/: a2po.yaml  async_grpo.yaml  dense_to_moe.yaml  dpo.yaml  gkd.yaml  gold.yaml  grpo.yaml  kto.yaml  sdpo.yaml  sft.yaml
configs/dataset/: cpt_dataset.yaml  dpo.yaml  dpo_dataset.yaml  gkd.yaml  gkd_dataset.yaml  grpo.yaml  grpo_dataset.yaml  kto.yaml  sft.yaml  sft_dataset.yaml  test.yaml
configs/deepspeed/: ds_config.yaml
configs/dense_to_moe/: dense_to_moe.yaml
configs/image_augmentation/: base.yaml
configs/model_loading/: train_runtime.yaml
configs/peft_initialization/: lora.yaml
configs/reward/: base.yaml  database.yaml  embedding.yaml  manager.yaml
configs/reward_database/: reward_database.yaml
configs/reward_embedding/: reward_embedding.yaml
configs/reward_manager/: reward_manager.yaml
configs/run_metadata/: allocation.yaml
configs/test_dataset/: test_dataset.yaml
configs/tracking/: mlflow.yaml  wandb.yaml
configs/trainer/: a2po.yaml  async_grpo.yaml  dpo_trainer.yaml  gkd.yaml  gkd_trainer.yaml  gold.yaml  grpo.yaml  grpo_trainer.yaml  kto.yaml  kto_trainer.yaml  sdpo.yaml
configs/training_arguments/: a2po.yaml  async_grpo.yaml  dpo.yaml  dpo_config.yaml  gkd.yaml  gkd_config.yaml  gold.yaml  grpo.yaml  grpo_config.yaml  kto.yaml  kto_config.yaml  sdpo.yaml  sft.yaml  sft_config.yaml
scripts/: dpo_train.sh  dus.sh  preprocess.sh  slurm_dpo_train.sh  slurm_train.sh  specialize_reasoning.sh  test.sh  test_all.sh  test_large.sh  test_large_all.sh  test_vllm.sh  test_vllm_all.sh  train.sh  upload_all_to_hf_hub.sh  upload_to_hf_hub.sh  wus.sh
scripts/postprocessing/: merge_lora.sh  upload_all_to_hf_hub.sh  upload_to_hf_hub.sh
scripts/preprocessing/: dense_to_moe.sh  dus.sh  merge_dense_lora_to_moe.sh  preprocess.sh  specialize_reasoning.sh  wus.sh
scripts/test/: test.sh  test_all.sh  test_large.sh  test_large_all.sh  test_vllm.sh  test_vllm_all.sh
scripts/tests/: test.sh  test_large_all.sh  test_vllm_all.sh
scripts/train/: a2po_train.sh  async_grpo_train.sh  dpo_train.sh  gkd_train.sh  gold_train.sh  grpo_train.sh  kto_train.sh  sdpo_train.sh  slurm_dpo_train.sh  slurm_grpo_train.sh  slurm_train.sh  train.sh
(+79 files in other folders)
