[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fine-tune-hf"
version = "1.7.3"
description = "LLM/VLM fine-tuning and evaluation pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "bitsandbytes==0.48.2",
    "datasets==4.4.1",
    "deepspeed==0.18.2",
    "faiss-cpu==1.13.1",
    "huggingface-hub==0.36.0",
    "hydra-core==1.3.2",
    "liger_kernel==0.6.4",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "pandas==2.3.3",
    "peft==0.18.0",
    "pyarrow==22.0.0",
    "python-dotenv==1.2.1",
    "rouge_score==0.1.2",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "tokenizers==0.22.1",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "trl==0.26.2",
    "vllm==0.11.0",
    "wandb==0.23.0",
]

[project.optional-dependencies]
gpu = [
    "flash-attn @ git+https://github.com/Dao-AILab/flash-attention.git@060c9188beec3a8b62b33a3bfa6d5d2d44975fab",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
