[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fine-tune-hf"
version = "1.9.1"
description = "LLM/VLM fine-tuning and evaluation pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.4.0",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.8.3",
    "deepspeed==0.18.8",
    "faiss-cpu==1.13.2",
    "huggingface-hub==1.8.0",
    "hydra-core==1.3.2",
    "liger_kernel==0.7.0",
    "nltk==3.9.3",
    "numpy==2.4.3",
    "omegaconf==2.3.0",
    "pandas==3.0.1",
    "peft==0.18.1",
    "pyarrow==23.0.1",
    "python-dotenv==1.2.2",
    "rouge_score==0.1.2",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.5.0",
    "trl==1.0.0",
    "vllm==0.18.1",
    "wandb==0.25.1",
]

[project.optional-dependencies]
gpu = [
    "flash-attn @ git+https://github.com/Dao-AILab/flash-attention.git@060c9188beec3a8b62b33a3bfa6d5d2d44975fab",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
